--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -22,11 +22,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="40dp"
                 android:background="#0000"
                 android:onClick="trigger1"
-                android:src="@drawable/ic_sunglasses1"
+                android:src="@drawable/m1"
                 app:layout_constraintEnd_toStartOf="@+id/glasses2Btn"
-                app:layout_constraintHorizontal_bias="0.4"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,9 +36,10 @@
                 android:id="@+id/glasses2Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="35dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="25dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses3"
+                android:src="@drawable/m2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,10 +47,10 @@
                 android:id="@+id/glasses3Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="60dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses4"
+                android:src="@drawable/m3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses1Btn" />
 
@@ -56,21 +59,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
                 android:background="#0000"
-                android:src="@drawable/ic_group_6"
+                android:src="@drawable/m4"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.554"
-                app:layout_constraintStart_toEndOf="@+id/glasses3Btn"
                 app:layout_constraintTop_toBottomOf="@+id/glasses2Btn" />
 
             <ImageButton
                 android:id="@+id/glasses5Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="60dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses1"
+                android:src="@drawable/m5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses3Btn" />
 
@@ -78,10 +80,10 @@
                 android:id="@+id/glasses6Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="56dp"
-                android:layout_marginEnd="35dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses3"
+                android:src="@drawable/m6"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toEndOf="@+id/glasses5Btn"
@@ -91,10 +93,10 @@
                 android:id="@+id/glasses7Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="60dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses4"
+                android:src="@drawable/m7"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses5Btn" />
 
@@ -103,9 +105,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
-                android:layout_marginEnd="35dp"
+                android:layout_marginEnd="25dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses3"
+                android:src="@drawable/m8"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses6Btn" />
 
@@ -113,10 +115,10 @@
                 android:id="@+id/glasses9Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="60dp"
                 android:background="#0000"
-                android:src="@drawable/ic_group_6"
+                android:src="@drawable/m9"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses7Btn" />
 
@@ -125,9 +127,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
-                android:layout_marginEnd="35dp"
+                android:layout_marginEnd="25dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses1"
+                android:src="@drawable/m10"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses8Btn" />
 
@@ -135,10 +137,10 @@
                 android:id="@+id/glasses11Btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="35dp"
+                android:layout_marginStart="25dp"
                 android:layout_marginTop="60dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses3"
+                android:src="@drawable/m11"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses9Btn" />
 
@@ -147,11 +149,77 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60dp"
-                android:layout_marginEnd="35dp"
+                android:layout_marginEnd="25dp"
                 android:background="#0000"
-                android:src="@drawable/ic_sunglasses4"
+                android:src="@drawable/m12"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses10Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses13Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m13"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses11Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses14Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m14"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses12Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses15Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m15"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses13Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses16Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m16"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses14Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses17Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m17"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses15Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses18Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m18"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses16Btn" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
