All 40 Models Done, Finished Standardizing button size
Now all Icons are 360x143. Resized using GIMP. Now sliding window has all 40 Models

--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -221,6 +221,248 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/glasses16Btn" />
 
+            <ImageButton
+                android:id="@+id/glasses19Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m19"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses17Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses20Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m20"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses18Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses21Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m21"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses19Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses22Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m22"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses20Btn" />
+
+            <ImageButton
+            android:id="@+id/glasses23Btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="60dp"
+            android:background="#0000"
+            android:src="@drawable/m23"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/glasses21Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses24Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m24"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses22Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses25Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m25"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses23Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses26Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m26"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses24Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses27Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m27"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses25Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses28Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m28"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses26Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses29Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m29"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses27Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses30Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m30"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses28Btn" />
+
+            <ImageButton
+            android:id="@+id/glasses31Btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="60dp"
+            android:background="#0000"
+            android:src="@drawable/m31"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/glasses29Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses32Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m32"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses30Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses33Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m33"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses31Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses34Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m34"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses32Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses35Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m35"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses33Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses36Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m36"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses34Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses37Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m37"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses35Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses38Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m38"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses36Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses39Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="60dp"
+                android:background="#0000"
+                android:src="@drawable/m39"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses37Btn" />
+
+            <ImageButton
+                android:id="@+id/glasses40Btn"
+                android:layout_width="wrap_content"
+                android:layout_height="48dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="25dp"
+                android:background="#0000"
+                android:src="@drawable/m40"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/glasses38Btn" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
