--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -4,21 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFACD"
     tools:context=".RecommendationsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="32dp"
-        android:text="Recommendations Fragment" />
+
 
     <ImageButton
         android:id="@+id/Model1"
-        android:layout_width="145dp"
-        android:layout_height="127dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:background="#0000"
         android:onClick="TestReco"
         tools:ignore="OnClick" />
@@ -26,32 +23,147 @@
 
     <ImageButton
         android:id="@+id/Model2"
-        android:layout_width="145dp"
-        android:layout_height="127dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_marginStart="200dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:background="#0000"
+        android:onClick="TestReco"
         tools:ignore="OnClick" />
 
     <ImageButton
         android:id="@+id/Model3"
-        android:layout_width="145dp"
-        android:layout_height="127dp"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="110dp"
         android:background="#0000"
+        android:onClick="TestReco"
         tools:ignore="OnClick" />
 
     <ImageButton
-    android:id="@+id/Model4"
-    android:layout_width="145dp"
-    android:layout_height="127dp"
-    android:layout_marginStart="200dp"
-    android:layout_marginTop="200dp"
-    android:background="#0000"
-    tools:ignore="OnClick" />
+        android:id="@+id/Model4"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="110dp"
+        android:background="#0000"
+        android:onClick="TestReco"
+        tools:ignore="OnClick" />
+
+    <ImageButton
+        android:id="@+id/Model5"
+        android:layout_width="120dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="185dp"
+        android:background="#0000"
+        android:onClick="TestReco"
+        tools:ignore="OnClick" />
 
 
 
 </FrameLayout>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!--
+    <?xml version="1.0" encoding="utf-8"?>
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".RecommendationsFragment">
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#FFFACD">
+
+            &lt;!&ndash; Update blank fragment layout &ndash;&gt;
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:padding="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <ImageButton
+                    android:id="@+id/Model1"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="25dp"
+                    android:background="#0000"
+                    android:onClick="TestReco"
+                    app:layout_constraintEnd_toStartOf="@+id/Model2"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/Model2"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="180dp"
+                    android:background="#0000"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/Model3"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="25dp"
+                    android:layout_marginTop="50dp"
+                    android:background="#0000"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/Model1" />
+
+                <ImageButton
+                    android:id="@+id/Model4"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginEnd="180dp"
+                    android:background="#0000"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/Model2" />
+
+                <ImageButton
+                    android:id="@+id/Model5"
+                    android:layout_width="120dp"
+                    android:layout_height="50dp"
+                    android:layout_marginStart="200dp"
+                    android:layout_marginTop="50dp"
+                    android:background="#0000"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/Model3" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+
+    </FrameLayout>
+
+    -->
