--- a/app/src/main/res/layout/new_camera_page.xml
+++ b/app/src/main/res/layout/new_camera_page.xml
@@ -14,7 +14,7 @@
             android:layout_height="match_parent"
             android:id="@+id/arFragment"
             android:name="com.example.twoscreenapp.CustomArFragment"
-            tools:layout="@layout/activity_camera_page" />
+            tools:layout="@layout/new_camera_page" />
 
         <ImageButton
             android:id="@+id/cameraButton"
