--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFACD"
-    tools:context=".RecommendationsFragment">
+    tools:context=".RecommendationsFragment"
+    android:id="@+id/fragement_recommendation">
 
     <!-- TODO: Update blank fragment layout -->
 
