--- a/app/src/main/res/layout/log_in_page.xml
+++ b/app/src/main/res/layout/log_in_page.xml
@@ -11,8 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="No user"
-
+        android:text="Welcome, Guest User"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -79,12 +78,11 @@
 
     <Button
         android:id="@+id/skipbtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="50dp"
         android:layout_marginTop="100dp"
-        android:background="#0000"
+        android:background="@drawable/camera"
         android:onClick="switchPage"
-        android:text="Camera"
         android:textColor="#38288B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
