updated UI of bottom sheet and facial shape results page

--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFACD"
+    android:background="#B3FFFFFF"
     tools:context=".RecommendationsFragment">
 
     <!-- TODO: Update blank fragment layout -->
