--- a/app/src/main/res/layout/activity_recommendation_page.xml
+++ b/app/src/main/res/layout/activity_recommendation_page.xml
@@ -38,10 +38,14 @@
         android:id="@+id/msg1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/googleSignIn"
+        android:text="face shape result"
+        android:fontFamily="@font/nunitobold"
+        android:textColor="#220033"
+        android:textSize="25sp"
+        app:layout_constraintBottom_toTopOf="@+id/getrecobtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/msg2" />
 
     <TextView
         android:id="@+id/msg2"
@@ -52,7 +56,7 @@
         android:text="Your face shape is"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="#FDFDFD"
+        android:textColor="#220033"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
