--- a/app/src/main/res/layout/activity_recommendation_page.xml
+++ b/app/src/main/res/layout/activity_recommendation_page.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/msg2"
+        app:layout_constraintBottom_toTopOf="@+id/faceShapemsg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/msg2"
+        app:layout_constraintBottom_toTopOf="@+id/faceShapemsg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         tools:visibility="invisible" />
 
     <TextView
-        android:id="@+id/msg1"
+        android:id="@+id/msg2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="face shape result"
@@ -45,10 +45,10 @@
         app:layout_constraintBottom_toTopOf="@+id/getrecobtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/msg2" />
+        app:layout_constraintTop_toBottomOf="@+id/faceShapemsg" />
 
     <TextView
-        android:id="@+id/msg2"
+        android:id="@+id/faceShapemsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="300dp"
@@ -67,7 +67,7 @@
         android:id="@+id/getrecobtn"
         android:layout_width="160dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="250dp"
+        android:layout_marginBottom="240dp"
         android:background="#84719B"
         android:fontFamily="@font/nunitobold"
         android:onClick="getRec"
