--- a/app/src/main/res/layout/new_product_page.xml
+++ b/app/src/main/res/layout/new_product_page.xml
@@ -18,12 +18,12 @@
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#56000000"
+                android:background="#ffffff"
                 app:tabTextAppearance="@style/MyCustomTabText"
-                app:tabTextColor="#ffffff"
-                app:tabTextFont="@font/atma"
-                app:tabSelectedTextColor="@color/purple_light"
-                app:tabIndicatorColor="@color/purple_light">
+                app:tabTextColor="#45000000"
+
+                app:tabSelectedTextColor="@color/purple"
+                app:tabIndicatorColor="@color/purple">
 
 
             </com.google.android.material.tabs.TabLayout>
