--- a/app/src/main/res/layout/new_camera_page.xml
+++ b/app/src/main/res/layout/new_camera_page.xml
@@ -77,13 +77,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="back"
+            android:background="#0000"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.047"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.024"
-            app:srcCompat="@drawable/backbutton" />
+            app:srcCompat="@drawable/ic_return" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
