--- a/app/src/main/res/layout/fragment_products.xml
+++ b/app/src/main/res/layout/fragment_products.xml
@@ -9,7 +9,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#B3FFFFFF">
+        android:background="@color/fragment_background">
 
         <!-- Update blank fragment layout -->
         <androidx.constraintlayout.widget.ConstraintLayout
