--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,8 +11,14 @@
         <item name="android:windowAnimationStyle">@null</item>
     </style>
 
+<!--    <style name="CustomViewAllTab" parent="@android:style/TextAppearance.Widget.TabWidget">-->
+<!--        <item name="android:textSize">20sp</item>-->
+<!--        <item name="android:fontFamily">@font/atma</item>-->
+<!--    </style>-->
+
     <style name="MyCustomTabText" parent="TextAppearance.Design.Tab">
-        <item name="android:textSize">12sp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontFamily">@font/atma</item>
     </style>
 
     <style name="CustomDialogTheme" parent="android:Theme.Dialog">
