--- a/app/src/main/res/layout/log_in_page.xml
+++ b/app/src/main/res/layout/log_in_page.xml
@@ -23,18 +23,18 @@
         android:id="@+id/googleSignIn"
         android:layout_width="160dp"
         android:layout_height="50dp"
+        android:layout_marginTop="32dp"
         android:backgroundTint="#38288B"
         android:fontFamily="@font/atma"
         android:onClick="GGSignin"
         android:text="LOG IN"
         android:textColor="#FFFFFF"
+
         android:textSize="25sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.65" />
+        app:layout_constraintTop_toBottomOf="@+id/helloMsg" />
 
     <Button
         android:id="@+id/logOut"
@@ -83,13 +83,12 @@
         android:id="@+id/skipbtn"
         android:layout_width="65dp"
         android:layout_height="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/camera"
         android:onClick="switchPage"
         android:textColor="#38288B"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/helloMsg" />
+        app:layout_constraintTop_toBottomOf="@+id/googleSignIn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
