--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,9 +8,9 @@
     <color name="colorpressed">#F2FFFFFF</color>
     <color name="purple">#6C0093</color>
     <color name="purple_light">#8F75B1</color>
-    <color name="fragment_background">#D3F8DFDA</color>
-    <color name="tab_background">#749AF2</color>
-    <color name="tab_unselectedtext">#45000000</color>
-    <color name="tab_selectedtext">#ffffff</color>
+    <color name="fragment_background">#D3F3ECE7</color>
+    <color name="tab_background">#443D53</color>
+    <color name="tab_unselectedtext">#ffffff</color>
+    <color name="tab_selectedtext">#8486A3</color>
 
 </resources>
