--- a/app/src/main/res/layout/log_in_page.xml
+++ b/app/src/main/res/layout/log_in_page.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:fontFamily="@font/atma"
+        android:fontFamily="@font/montserratlight"
         android:text="Welcome, Guest User"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,8 +25,9 @@
         android:layout_height="50dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="#38288B"
-        android:fontFamily="@font/atma"
+        android:fontFamily="@font/montserratregular"
         android:onClick="GGSignin"
+        android:padding="2dp"
         android:text="LOG IN"
         android:textColor="#FFFFFF"
 
@@ -43,6 +44,8 @@
         android:backgroundTint="#38288B"
         android:onClick="GGSignOut"
         android:text="LOG OUT"
+        android:padding="2dp"
+        android:fontFamily="@font/montserratregular"
         android:textColor="#FFFFFF"
         android:visibility="gone"
         android:textSize="25sp"
@@ -70,7 +73,7 @@
         android:layout_width="91dp"
         android:layout_height="63dp"
         android:layout_marginTop="176dp"
-        android:fontFamily="@font/atma"
+        android:fontFamily="@font/montserratmedium"
         android:rotation="-24"
         android:text="FASHION AR"
         android:textColor="#38288B"
