--- a/app/src/main/res/layout/a_scanning_page.xml
+++ b/app/src/main/res/layout/a_scanning_page.xml
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:fontFamily="@font/nunitobold"
+        android:fontFamily="@font/montserratregular"
         android:text="Place your face within the frame"
         android:textAlignment="center"
         android:textColor="#FDFDFD"
