--- a/app/src/main/res/layout/activity_recommendation_page.xml
+++ b/app/src/main/res/layout/activity_recommendation_page.xml
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="face shape result"
-        android:fontFamily="@font/nunitobold"
+        android:fontFamily="@font/montserratmedium"
         android:textColor="#220033"
         android:gravity="center"
         android:textSize="18sp"
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="260dp"
-        android:fontFamily="@font/nunitolight"
+        android:fontFamily="@font/montserratlight"
         android:text="Your face shape is"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
@@ -67,11 +67,12 @@
 
     <Button
         android:id="@+id/getrecobtn"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
+        android:layout_width="170dp"
+        android:layout_height="35dp"
+        android:textSize="14sp"
         android:layout_marginBottom="240dp"
         android:background="#84719B"
-        android:fontFamily="@font/nunitobold"
+        android:fontFamily="@font/montserratregular"
         android:onClick="getRec"
         android:text="Recommendations"
         android:textColor="#FDFDFD"
