--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,7 +18,7 @@
 
     <style name="MyCustomTabText" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">15sp</item>
-        <item name="android:fontFamily">@font/atma</item>
+        <item name="android:fontFamily">@font/montserratregular</item>
     </style>
 
     <style name="CustomDialogTheme" parent="android:Theme.Dialog">
