change font size

--- a/app/src/main/res/layout/a_scanning_page.xml
+++ b/app/src/main/res/layout/a_scanning_page.xml
@@ -49,7 +49,7 @@
         android:onClick="back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/backbutton" />
+        app:srcCompat="@drawable/ic_return" />
 
     <TextView
         android:id="@+id/instrucMsg"
