--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -10,60 +10,73 @@
 
 
     <!-- TODO: Update blank fragment layout -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="20dp">
 
 
-    <ImageButton
-        android:id="@+id/Model1"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
-        android:background="#0000"
-        android:onClick="TestReco"
-        tools:ignore="OnClick" />
+        <ImageButton
+            android:id="@+id/Model1"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="40dp"
+            android:background="#0000"
+            android:onClick="TestReco"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="OnClick" />
 
+        <ImageButton
+            android:id="@+id/Model2"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="25dp"
+            android:background="#0000"
+            android:onClick="TestReco"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="OnClick" />
 
-    <ImageButton
-        android:id="@+id/Model2"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="30dp"
-        android:background="#0000"
-        android:onClick="TestReco"
-        tools:ignore="OnClick" />
+        <ImageButton
+            android:id="@+id/Model3"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="40dp"
+            android:background="#0000"
+            android:onClick="TestReco"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Model1"
+            tools:ignore="OnClick" />
 
-    <ImageButton
-        android:id="@+id/Model3"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="110dp"
-        android:background="#0000"
-        android:onClick="TestReco"
-        tools:ignore="OnClick" />
+        <ImageButton
+            android:id="@+id/Model4"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="25dp"
+            android:background="#0000"
+            android:onClick="TestReco"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Model2"
+            tools:ignore="OnClick" />
 
-    <ImageButton
-        android:id="@+id/Model4"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="110dp"
-        android:background="#0000"
-        android:onClick="TestReco"
-        tools:ignore="OnClick" />
+        <ImageButton
+            android:id="@+id/Model5"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="40dp"
+            android:background="#0000"
+            android:onClick="TestReco"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Model3"
+            tools:ignore="OnClick" />
 
-    <ImageButton
-        android:id="@+id/Model5"
-        android:layout_width="120dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="110dp"
-        android:layout_marginTop="185dp"
-        android:background="#0000"
-        android:onClick="TestReco"
-        tools:ignore="OnClick" />
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
 
