--- a/app/src/main/res/layout/a_scanning_page.xml
+++ b/app/src/main/res/layout/a_scanning_page.xml
@@ -58,6 +58,10 @@
         android:layout_marginTop="100dp"
         android:fontFamily="@font/montserratregular"
         android:text="Place your face within the frame"
+        android:shadowColor="#7F000000"
+        android:shadowDx="-1"
+        android:shadowDy="-1"
+        android:shadowRadius="1"
         android:textAlignment="center"
         android:textColor="#FDFDFD"
         android:textSize="22sp"
