added outline to icons

--- a/app/src/main/res/layout/last_page.xml
+++ b/app/src/main/res/layout/last_page.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#000000"
     tools:context=".PreviewPhoto">
-
 
     <ImageView
         android:id="@+id/previewPhoto"
@@ -16,6 +14,7 @@
         android:contentDescription="Preview Photo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
@@ -71,5 +70,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_return" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
