--- a/app/src/main/res/drawable/ic_download.xml
+++ b/app/src/main/res/drawable/ic_download.xml
@@ -2,8 +2,8 @@
     android:viewportWidth="138.29" android:width="45dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@color/purple_light"
         android:pathData="M71.12,1.5c4.94,2 6.59,5.9 6.56,11.42 -0.15,22.44 -0.06,44.88 -0.06,67.33v2.68c0.82,-0.61 1.4,-1 1.94,-1.45 6,-4.85 12,-9.74 18,-14.54 5.43,-4.31 12.46,-1.41 13.68,5.64a8.54,8.54 0,0 1,-3 8.46q-16.9,13.78 -33.95,27.37C71,111 67.34,111 64,108.45Q47.25,95.84 30.58,83.13A9.29,9.29 0,0 1,28.37 70.6c2.69,-4.25 7.72,-5.36 11.81,-2.38 6.21,4.53 12.31,9.21 18.48,13.8 0.57,0.43 1.05,1.08 2,1.13V80.88c0,-22.65 0.08,-45.31 -0.07,-68 0,-5.53 1.62,-9.43 6.56,-11.42Z"
-        android:strokeColor="#00000000" android:strokeWidth="3"/>
+        android:strokeColor="#756091" android:strokeWidth="2"/>
     <path android:fillColor="@color/purple_light"
         android:pathData="M1.5,126.4c0.66,-0.39 0.57,-1.19 0.83,-1.8 1.64,-3.78 5.59,-6 9.27,-5.15a8.73,8.73 0,0 1,6.9 8.79c0,2.47 0.11,4.95 0,7.42 -0.08,1.54 0.41,1.83 1.75,1.82 16,0 31.89,0 47.83,0 16.6,0 33.21,0 49.81,0 1.46,0 2.09,-0.26 2,-2 -0.16,-2.25 0,-4.52 0,-6.79 0,-5.06 3.09,-8.87 7.67,-9.37a8.44,8.44 0,0 1,9 7.11c0,0.16 0.24,0.28 0.36,0.42v0.42a67.74,67.74 0,0 0,-0.18 9.45,52.21 52.21,0 0,0 0.18,8.39v3.4c-0.73,4.27 -3.08,6.72 -7.12,7.23h-3.16a3.71,3.71 0,0 0,-2.13 -0.21q-55.44,0 -110.86,0a3.71,3.71 0,0 0,-2.13 0.21H8.23c-3.81,-0.74 -6.05,-3.14 -6.73,-7.23v-3.82c0.47,-3.28 0.16,-6.58 0.18,-9.87a44.19,44.19 0,0 0,-0.18 -8Z"
-        android:strokeColor="@color/purple_light" android:strokeWidth="3"/>
+        android:strokeColor="#756091" android:strokeWidth="2"/>
 </vector>
