--- a/app/src/main/res/layout/last_page.xml
+++ b/app/src/main/res/layout/last_page.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="420dp"
+    android:layout_gravity="center"
     android:layout_height="match_parent"
     tools:context=".PreviewPhoto">
 
     <ImageView
         android:id="@+id/previewPhoto"
-        android:layout_width="match_parent"
+        android:layout_width="420dp"
         android:layout_height="match_parent"
         android:adjustViewBounds="true"
         android:contentDescription="Preview Photo"
