--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -76,6 +76,18 @@
             app:layout_constraintTop_toBottomOf="@+id/Model3"
             tools:ignore="OnClick" />
 
+        <ImageButton
+            android:id="@+id/Dummy"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="228dp"
+            android:layout_marginTop="40dp"
+            android:background="#ffff"
+            android:onClick="refreshReco"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Model4"
+            tools:ignore="OnClick" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
