--- a/app/src/main/res/layout/log_in_page.xml
+++ b/app/src/main/res/layout/log_in_page.xml
@@ -50,7 +50,7 @@
 
         android:textColor="#FFFFFF"
         android:textSize="25sp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
